9 January 2009: Wouter
	- created svn tag for 1.2.0 release.
	- svn trunk contains 1.2.1 version number.
	- iana portlist updated for todays list.
	- removed debug print.

8 January 2009: Wouter
	- new version of ldns-trunk (today) included as tarball, fixed 
	  bug #224, building with -j race condition.
	- remove possible race condition in the test for race conditions.

7 January 2009: Wouter
	- version 1.2.0 in preparation.
	- feature to allow wildcards (*, ?, [], {}. ~) in trusted-keys-file
	  statements. (Adapted from patch by Paul Wouters).
	- typo fix and iana portlist updated.
	- porting testsuite; unused var warning, and type fixup.

6 January 2009: Wouter
	- fixup packet-of-death when compiled with --enable-debug.
	  A malformed packet could cause an internal assertion failure.
	- added test for HINFO canonicalisation behaviour.
	- fixup reported problem with transparent local-zone data where
	  queries with different type could get nxdomain. Now queries
	  with a different name get resolved normally, with different type
	  get a correct NOERROR/NODATA answer.
	- HINFO no longer downcased for validation, making unbound compatible
	  with bind and ldns.
	- fix reading included config files when chrooted.
	  Give full path names for include files.
	  Relative path names work if the start dir equals the working dir.
	- fix libunbound message transport when no packet buffer is available.

5 January 2009: Wouter
	- fixup getaddrinfo failure handling for remote control port.
	- added L.ROOT-SERVERS.NET. AAAA 2001:500:3::42 to builtin root hints.
	- fixup so it works with libev-3.51 from http://dist.schmorp.de/libev/
	- comm_timer_set performs base_set operation after event_add.

18 December 2008: Wouter
	- fixed bug reported by Duane Wessels: error in DLV lookup, would make
	  some zones that had correct DLV keys as insecure.
	- follows -rc makedist from ldns changes (no _rc).
	- ldns tarball updated with 1.4.1rc for DLV unit test.